--- a/pod/perlhist.pod
+++ b/pod/perlhist.pod
@@ -609,6 +609,7 @@ the strings?).
  Sawyer X  5.25.8       2016-Dec-20
  Abigail   5.25.9       2017-Jan-20
  Renee     5.25.10      2017-Feb-20
+ Sawyer X  5.25.11      2017-Feb-20
 
 =head2 SELECTED RELEASE SIZES
 
