--- a/Porting/release_schedule.pod
+++ b/Porting/release_schedule.pod
@@ -63,7 +63,7 @@ you should reset the version numbers to the next blead series.
   2016-12-20  5.25.8 ✓        Sawyer X
   2017-01-20  5.25.9 ✓        Abigail
   2017-02-20  5.25.10 ✓       Renée Bäcker
-  2017-03-20  5.25.11         Sawyer X
+  2017-03-20  5.25.11 ✓       Sawyer X
 
 (RC0 for 5.26.0 will be released once we think that all the blockers have been
 addressed.  This typically means some time in April or May.)
