--- a/Porting/epigraphs.pod
+++ b/Porting/epigraphs.pod
@@ -19,6 +19,8 @@ Consult your favorite dictionary for details.
 
 =head2 v5.25.11 - Daniel Kahneman, Thinking, Fast and Slow
 
+L<Announced on 2017-03-20 by Sawyer X|http://www.nntp.perl.org/group/perl.perl5.porters/2017/03/msg243624.html>
+
   Subjective confidence in a judgment is not a reasoned evaluation of
   the probability that this judgment is correct. Confidence is a
   feeling, which reflects the coherence of the information and the
