--- a/pod/perldeprecation.pod
+++ b/pod/perldeprecation.pod
@@ -266,7 +266,7 @@ The attributes C<< :locked >> (on code references) and C<< :unique >>
 Perl 5.005 and Perl 5.8.8 respectively. Their use has been deprecated
 since.
 
-In Perl 5.28, these attributes are syntax errors. Since the
+As of Perl 5.28, these attributes are syntax errors. Since the
 attributes do not do anything, removing them from your code fixes
 the syntax error; and removing them will not influence the behaviour
 of your code.
@@ -276,7 +276,7 @@ of your code.
 
 Perl has allowed you to use a bare here-document terminator to have the
 here-document end at the first empty line. This practise was deprecated
-in Perl 5.000, in Perl 5.28, using a bare here-document terminator
+in Perl 5.000; as of Perl 5.28, using a bare here-document terminator
 throws a fatal error.
 
 You are encouraged to use the explictly quoted form if you wish to
@@ -319,7 +319,7 @@ quantifiers, as quote delimiters in C<qI<X>...I<X>> (where I<X> is
 the C<chr()> of a large code point), and as the upper limits in
 loops.
 
-The use of out of range code points was deprecated in Perl 5.24; in
+The use of out of range code points was deprecated in Perl 5.24; as of
 Perl 5.28 using a code point exceeding C<IV_MAX> throws a fatal error.
 
 If your code is to run on various platforms, keep in mind that the upper
@@ -332,7 +332,7 @@ for 64-bit integers, C<IV_MAX> equals C<0x7FFFFFFFFFFFFFFF>.
 
 It was allowed to use a list of variables in a format, without
 separating them with commas. This usage has been deprecated
-for a long time, and in Perl 5.28, this throws a fatal error.
+for a long time, and as of Perl 5.28, this throws a fatal error.
 
 =head3 Use of C<\N{}>
 
@@ -350,7 +350,7 @@ This idiom is likely to be confusing, and it was deprecated in
 Perl 5.10.
 
 Using the same symbol to C<open()> a filehandle and a dirhandle
-throws a fatal error in Perl 5.28.
+throws a fatal error as of Perl 5.28.
 
 You should be using two different symbols instead.
 
@@ -362,7 +362,7 @@ than C<undef> was deprecated in Perl 5.22. Full deprecation
 of the variable happened in Perl 5.25.3.
 
 Setting this variable to anything other than an undefined value
-throws a fatal error in Perl 5.28.
+throws a fatal error as of Perl 5.28.
 
 
 =head3 C<< B::OP::terse >>
@@ -399,7 +399,7 @@ C<use AutoLoader 'AUTOLOAD';>.
 The string bitwise operators, C<&>, C<|>, C<^>, and C<~>, treat
 their operands as strings of bytes. As such, values above 0xFF 
 are nonsensical. Using such code points with these operators
-was deprecated in Perl 5.24, and is fatal starting in Perl 5.28.
+was deprecated in Perl 5.24, and is fatal as of Perl 5.28.
 
 =head3 In XS code, use of C<to_utf8_case()>
 
@@ -418,13 +418,13 @@ L<C<toUPPER_utf8_safe>|perlapi/toUPPER_utf8_safe>.
 Since Perl 5.18, the option C<< --libpods >> has been deprecated, and
 using this option did not do anything other than producing a warning.
 
-The C<< --libpods >> option is no longer recognized in Perl 5.26.
+The C<< --libpods >> option is no longer recognized as of Perl 5.26.
 
 
 =head3 The utilities C<< c2ph >> and C<< pstruct >>
 
 These old, perl3-era utilities have been deprecated in favour of
-C<< h2xs >> for a long time. In Perl 5.26, they have been removed.
+C<< h2xs >> for a long time. As of Perl 5.26, they have been removed.
 
 
 =head3 Trapping C<< $SIG {__DIE__} >> other than during program exit.
@@ -438,7 +438,7 @@ pending exception is actually a useful feature, and not a bug.
 
 Perl never issued a deprecation warning for this; the deprecation
 was by documentation policy only. But this deprecation has been 
-lifted in Perl 5.26.
+lifted as of Perl 5.26.
 
 
 =head3 Malformed UTF-8 string in "%s"
